CVS-20090306
+ output for stress can now be written to a file as well
+ [APOT] fixed potentials without _sc option
+ [APOT] added composition nodes to chemical potentials (only 2d)

CVS-20090216
+ fix rms error for energy-weight
+ [APOT] only write new potential after step adjustment
+ [APOT] the first step of a newly read potential was always wrong
+ don't write end_pot if there was no optimization
+ some cleanup for the error output
+ write unweighted energies and stresses
+ [APOT] added new potentials, for details see web page

CVS-20090210
+ [ACML] Updated compiler flags for acml, gcc...

CVS-20090116
+ [APOT] reworked the validate part
+ [APOT] enabled MPI support for apot, not tested yet, probably broken by chemical potentials
+ [APOT] added chemical potentials to the fit parameters
+ added na_typ variable, that holds the number of atoms per atomtype
+ write force data to file if endforce is given in parameter file
+ added option to write radial pair distances
+ [APOT] cp_# parameters in potential files are now ignored if disable_cp=1
+ [APOT] apot now displays rcut as cutoff and no longer the end of the potential
+ [APOT] added radial distribution to awk script
+ [APOT] fix bug where potential output was always smoothed
+ added rms errors for forces, energies, stress
+ [APOT] the awk script now accepts radial distributions as well

CVS-20081201
+ [APOT] new_slots should now be a lot faster since we only update if there actually
  is a new parameter or a new cutoff radius
+ [APOT] Improved awk script to read an arbitrary number of potential files
+ [APOT] some minor tweaks in the SA-algorithm, mainly for speed purposes
+ [APOT] fixed bug with temporary potential files, now the current potential
  and not the past one is written to the tempfile
+ new variable real *calc_list that stores the parameters
  the potential in the calc_table was generated from

CVS-20081126
+ [APOT] Added an awk script to convert apot potentials to gnuplot format