@@ -1,3 +1,7 @@
+CVS-20090312
++ [APOT] composition nodes were completely broken, fix that
++ [APOT] compnodes utility to calculate some composition nodes
+
 CVS-20090306
 + output for stress can now be written to a file as well
 + [APOT] fixed potentials without _sc option
